# maglev

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  Justfile  README.md
cli/: Cargo.toml
cli/src/: filters.rs  main.rs
cli/templates/: job-alt.rst  job.rst
docs/: architecture.md  auth.md  errors.md  jobs.md
examples/: Cargo.toml  README.md
examples/src/: auth-oauth.rs  auth-password.rs  basic.rs
framework/: Cargo.toml
framework/examples/: basic.rs
framework/examples_wip/: basic.rs
framework/src/: auth.rs  config.rs  crypto.rs  error.rs  jobs.rs  lib.rs  routing.rs  serve.rs
framework/src/auth/: oauth.rs  session.rs
framework/src/jobs/: entry.rs  memory.rs  mod.rs  registry.rs  scheduler.rs  traits.rs  worker.rs
framework/src/mail/: job.rs  mailer.rs  message.rs  mod.rs
framework/tests/: auth_test.rs  config_test.rs  crypto_test.rs  jobs_test.rs
maglev-macros/: Cargo.toml
maglev-macros/src/: http_error.rs  lib.rs
maglev-macros/tests/: http-error.rs
