[package]
name = "maglev-examples"
version = "0.1.0"
edition = "2021"
publish = false

# Basic auth example - demonstrates JWT auth with user/admin roles
[[bin]]
name = "basic"
path = "src/basic.rs"
required-features = ["basic"]

# Password auth example - demonstrates session management with JWT + refresh tokens
[[bin]]
name = "auth-password"
path = "src/auth-password.rs"
required-features = ["sessions"]

# OAuth example - demonstrates Google/GitHub OAuth flows with session management
[[bin]]
name = "auth-oauth"
path = "src/auth-oauth.rs"
required-features = ["oauth", "sessions"]

# Add more examples here following this pattern:
# [[bin]]
# name = "jobs-demo"
# path = "src/jobs-demo.rs"

[dependencies]
maglev = { path = "../framework" }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
http = "1.0"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
oauth2 = "4.4"

[features]
basic = ["maglev/basic"]
sessions = ["maglev/sessions"]
oauth = ["maglev/oauth"]
