[package]
name = "maglev"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.14.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-cron-scheduler = "0.11.0"
axum = { version = "0.7.3", features = ["tower-log", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie", "typed-routing"] }

if-addrs = "0.13.2"


# Serialize & Deserialize
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.117"
serde-env = "0.2.0"

# Crypto
orion = "0.17.6"
argon2 = "0.5"

# Axum builds on Tower
tower = "0.4.11"
# tower-http = { version = "0.5.0", features = [
#     "catch-panic",
#     "cors",
#     "compression-full",
#     "sensitive-headers",
#     "timeout",
#     "trace",
# ] }

# Error handling
thiserror = "1.0.30"
maglev-macros = { path = "../maglev-macros" }

# Utilities
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
time = { version = "0.3.30", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
async-trait = "0.1.51"
dotenvy = "0.15.0"
log = "0.4.14"
rand = "0.8.4"
parse-display = "0.9.0"
# url = { version = "2.5.0", features = ["serde"] }
tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
base64 = "0.22.1"
# regex = "1.10.4"
# toml = "0.8.13"


# [dev-dependencies]
# sqlx = { version = "0.7", features = [
#     "runtime-tokio-native-tls",
#     "postgres",
#     "uuid",
#     "time",
#     "json"
# ] }
# anyhow = "1.0.48"



[features]
default = []
basic = []
